--- a/styles/style.css
+++ b/styles/style.css
@@ -31,8 +31,11 @@ color: #252432;
     color: rgba(0, 0, 0, 0.5);
 
 }
+
+
 .ash-color{
     color: #8987A1;
+    
 }
 
 .orange-color{
@@ -68,11 +71,13 @@ header{
     font-size: 65px;
     font-weight: 700;
 }
-
+.banner-img{
+    width: 100%;
+}
 
 /* main-cart-section styles */
 
-main{
+.main-margin{
     
     max-width: 1140px ;
     margin: 0px auto;
@@ -95,6 +100,9 @@ main{
 }
 .cart{
      padding: 30px 0px;
+}
+.cart img{
+    width: 100%;
 }
 
 .cart-title{
@@ -142,6 +150,87 @@ font-weight: 700;
     padding-left: 60px;  
 }
 
+
+
+/* main-latest-deal-section styles */
+
+.deals-h2{
+    font-size: 50px;
+    font-weight: 700;
+}
+.deals-text{
+    text-align: center;
+}
+
+/* newsletter-section styles */
+
+.newsletter{
+    height: 533px;
+    background-image: url("../assets/news-letter-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.newsletter-text{
+    text-align: center;
+}
+
+.newsletter-h2{
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+.email-field{
+    font-size: 16px;
+    padding: 15px 20px ;
+    width: 644px;
+    
+
+}
+.sub-btn{
+    color: #ffffff;
+    background-color: #E95A08;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 15px 50px 18px 50px;
+    margin-left: -4px;
+
+    
+
+}
+
+/* footer-section */
+.footer-section{
+    padding: 50px 160px;
+    
+}
+
+
+
+.footer-column li{
+    justify-content: space-between;
+    list-style: none;
+
+
+}
+.nav-link{
+    color: #6B7280;
+    text-decoration: none;
+ }
+ 
+ .social-flex{
+    gap:24px;
+ }
+
+
+
 /* shared styles */
  .display-flex{
     display: flex;
@@ -151,5 +240,6 @@ font-weight: 700;
     font-size: 22px;
  }
 
+ 
 
 
