--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
-body{
-    
-    background-color: #F5F8FF;
+body{ 
+    background-color: #F5F8FF; 
 }
 
 
@@ -152,7 +151,10 @@ header{
     width: 286px;
     
 }
-
+.lover-img-sec{
+    width: 540px;
+    height: 597px;
+}
 
 .lover-h2{
 font-size: 50px;
@@ -258,7 +260,7 @@ font-weight: 700;
 .discount{
     width: 100%;
     height: 100%;
-    background-color: #00000040;
+    background-color: rgba(0, 0, 0, 0.6);
     border-radius: 14px;
     display: flex;
     flex-direction: column;
@@ -360,5 +362,130 @@ font-weight: 700;
  }
 
  
+/* responsive section */
+
+@media screen and (max-width: 576px) {
+
+body{
+    width: 100vw;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+ 
+
+  
+/* header styles*/
+.nav-header{
+    padding: 30px 30px;
+}
+.res-header-nav{
+    display: none;
+    
+}
+.res-banner{
+    flex-direction: column-reverse;
+}   
+.header-banner{
+    margin-left: 10px;
+}
+.h1-header-text{
+    font-size: 40px;
+}
+.header-banner{
+    padding: 28px 0px;
+}
+
+.logo-header img{
+    width: 65px;
+    height: 38px;
+}
+.res-header{
+        margin-top: 0;
+        margin-bottom: 65px;
+    }
+
+/* cart styles */
+.cart-display-section{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+   
+}
+
+/* lover styles */
+.seller-badge{
+    display: none;
+}
+.plant-lover-section{
+    flex-direction: column;
+}
+.lover-img-sec{
+    width: 100%;
+    height: 100%;
+}
+
+/* Deals styles */
+.deals-image{
+    display: block;
+    width: 100%;
+    height: 425px;
+    gap: 0px;   
+    margin: 50px 10px 40px 10px;
+}
+.img1, .img2, .img3{
+    width: 100%;
+    height: 200px;
+
+}
+.img2{
+    margin: 20px 0px;
+}
+
+.discount-text3{
+    font-size: 20px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+.discount-p3{
+    color: #ffffff;
+    font-size: 16px;
+    font-weight: 600;
+}
+/* newsletter styles */
+.newsletter{
+    height: 30vh;
+    margin-top: 300px;
+    margin-bottom: 50px;
+}
+
+.email-field{
+    font-size: 16px;
+    padding: 15px 20px ;
+    width: auto;
+    
+
+}
+.newsletter-h2{
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+/* footer styles */
+.footer-column{
+    flex-direction: column;
+
+}
 
 
+.footer-logo{
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+
+
+}
