--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body{ 
-    background-color: #F5F8FF; 
+    background-color: #F5F8FF;
 }
 
 
@@ -369,8 +369,8 @@ font-weight: 700;
 body{
     width: 100vw;
     height: auto;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden;
 }
  
