--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,7 @@ header{
     top:-130px;
     left:350px;
     width: 286px;
+    filter: drop-shadow( 4px 10px 4px rgba(0, 0, 0, 0.25));
     
 }
 .lover-img-sec{
